# flipster_agent

./: README.md  pyproject.toml
datasets/: base_capabilites.py  device_capabilites.py  testsuite_collection.py
settings/: argument_config.py  logger_config.py
src/: run.py
src/controllers/: device_controller.py  driver_controller.py  element_controller.py  suit_properties.py  testcase_controller.py
src/pages/: account_page_a.py  assets_page_a.py  base_page_a.py  challenge_page_a.py  market_page_a.py
src/reports/: report.py
src/testcases/: abstract_common_testcase.py  account_testcase.py  assets_testcase.py  challenge_testcase.py  market_testcase.py
